--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-       <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+       <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
        <link rel="stylesheet" href="./styles.css">
   
   <title>Frontend Mentor | QR code component</title>
@@ -15,7 +15,7 @@
 
 <body>
         <div class="qr-container">
-          <img src="images\image-qr-code.png" alt="qr image"> 
+          <img src="./image-qr-code.png" alt="qr image"> 
             <h4>Improve your front-end skills by building projects</h4>
             <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
